<resources>
    <string name="app_name">DAM_UC3_AlexiaAsuncion</string>
    <string name="textViewRegistrate">Regístrate</string>
    <string name="textViewInfo">Es gratis (y lo seguirá siendo)</string>
    <string name="textViewNombre">Nombre:</string>
    <string name="plainTextNombre" />
    <string name="textViewApellidos">Apellidos:</string>
    <string name="plainTextApellidos" />
    <string name="textViewCorreo">Correo electrónico:</string>
    <string name="plainTextCorreo" />
    <string name="textViewContraseña">Constraseña nueva:</string>
    <string name="plainTextContraseña" />
    <string name="textViewSexo">Sexo:</string>
    <string name="radioButtonMujer">Mujer</string>
    <string name="radioButtonHombre">Hombre</string>
    <string name="textViewFecha">Fecha de nacimiento:</string>
    <string name="buttonRegistrar">Regístrate</string>
    <string name="textViewTitulo">Facebook</string>
    <string name="textViewCorreo1">Correo Electrónico</string>
    <string name="plainTextCorreo1" />
    <string name="textViewContra" />
    <string name="textViewContra1">Contraseña</string>
    <string name="buttonEntrar">Entrar</string>
    <string name="checkboxCerrarSesion">No cerrar sesión</string>
</resources>